<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:scaleType="center"
    android:orientation="vertical">

    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	tools:context=".GalvanizeFragment" >
    	
        <RelativeLayout
        	android:id="@+id/contactUsFirstBlock"
        	android:layout_width="380dp"
        	android:layout_height="match_parent"
        	android:layout_margin="10dp"
        	android:paddingTop="0dip"
        	android:paddingLeft="8dip"
        	android:paddingRight="8dip"
        	android:paddingBottom="8dip"
        	android:background="@drawable/rounded_corner" >
        	
            <TextView
            	android:id="@+id/contactUsTextView" 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/contact_us"
            	android:textColor="#E28C05"
            	android:textSize="28sp"
            	android:fontFamily="sans-serif-light" />
        
        	<View
            	android:id="@+id/dividerLineFirstBlock"
            	android:layout_below="@+id/contactUsTextView"
    			android:layout_width="match_parent"
    			android:layout_height="1dp"
    			android:layout_marginTop="2dp"
    			android:layout_marginBottom="8dp"
   				android:background="#FFFFFF"/>
        	
        	<TextView
           		android:id="@+id/nameRequiredTextView"
           		android:layout_below="@+id/dividerLineFirstBlock"
           		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
           		android:layout_marginBottom="10dp"
           		android:text="@string/name_required"
           		android:textColor="#FFFFFF"
           		android:textSize="16sp"
           		android:fontFamily="sans-serif-light" />
        	
        	<EditText 
            	android:id="@+id/nameTextField"
            	android:inputType="textPersonName"
            	android:layout_below="@+id/nameRequiredTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"/>
        	
        	<TextView
          		android:id="@+id/emailRequiredTextView"
           		android:layout_below="@+id/nameTextField"
           		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
           		android:layout_marginBottom="10dp"
           		android:text="@string/email_required"
           		android:textColor="#FFFFFF"
           		android:textSize="16sp"
           		android:fontFamily="sans-serif-light" />
        	
        	<EditText 
            	android:id="@+id/emailTextField"
            	android:inputType="textEmailAddress"
            	android:layout_below="@+id/emailRequiredTextView"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"/>
        	
        	<TextView
           		android:id="@+id/detailsTextView"
           		android:layout_below="@+id/emailTextField"
           		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
           		android:layout_marginBottom="10dp"
           		android:text="@string/details"
           		android:textColor="#FFFFFF"
           		android:textSize="16sp"
           		android:fontFamily="sans-serif-light" />
        	
        	<EditText
        	    android:id="@+id/detailsLargeTextBox"
        	    android:layout_below="@+id/detailsTextView"
    			android:inputType="textMultiLine"
    			android:lines="8"
    			android:minLines="0"
    			android:gravity="top|left"
    			android:maxLines="8"
   				android:layout_height="wrap_content" 
    			android:layout_width="fill_parent" />
        	
        	<TextView
           		android:id="@+id/hearAboutTextView"
           		android:layout_below="@+id/detailsLargeTextBox"
           		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"
           		android:layout_marginBottom="10dp"
           		android:text="@string/hear_about"
           		android:textColor="#FFFFFF"
           		android:textSize="16sp"
           		android:fontFamily="sans-serif-light" />
        	
        	<EditText
        	    android:id="@+id/hearAboutLargeTextBox"
        	    android:layout_below="@+id/hearAboutTextView"
    			android:inputType="textMultiLine"
    			android:lines="8"
    			android:minLines="0"
    			android:gravity="top|left"
    			android:maxLines="8"
   				android:layout_height="wrap_content" 
    			android:layout_width="fill_parent"
    			android:layout_marginBottom="10dp" />
        	
        	<Button 
            	android:id="@+id/sendMessageButton"
            	android:layout_below="@+id/hearAboutLargeTextBox"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/send_message"
            	android:textColor="#262626" />
        	
        </RelativeLayout>    
    	
    </RelativeLayout> 

</ScrollView>
